<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".second_onboard">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/skip"
        android:textColor="@color/content_color"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getstart_btn" />

    <TextView
        android:id="@+id/lable4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_serif"
        android:text="._"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getstart_btn" />

    <Button
        android:id="@+id/getstart_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/noto_serif"
        android:text="@string/getstart_btn"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/getstartbtn_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/lable2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/onboard2_content"
        android:textAlignment="center"
        android:textColor="@color/content_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lable1" />

    <TextView
        android:id="@+id/lable1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/Onboard2_header"
        android:textColor="@color/white"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="395dp"
        android:layout_height="445dp"
        android:layout_marginTop="-25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lable2"
        app:srcCompat="@drawable/whatsapp_image_2024_03_07_at_03_41_36_c0d02451_removebg_preview" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="@+id/getstart_btn"
        app:layout_constraintTop_toTopOf="@+id/getstart_btn"
        app:srcCompat="@drawable/baseline_east_24" />

    <TextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/back"
        android:textColor="@color/content_color"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getstart_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>