<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".terms">

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#022561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_west_24" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/terms"
        android:textColor="@color/white"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="365dp"
        android:layout_height="485dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/convergence"
        android:letterSpacing="0.02"
        android:lineSpacingExtra="15sp"
        android:text="@string/terms_content"
        android:textColor="@color/content_color"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/acceptBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/acceptBtn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_height"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btnncolor"
        android:fontFamily="@font/noto_serif"
        android:text="@string/accept"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:cornerRadius="@dimen/getstartbtn_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

</androidx.constraintlayout.widget.ConstraintLayout>