<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".create_pswd">

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#022561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_west_24" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="97dp"
        android:layout_height="89dp"
        android:layout_marginStart="289dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#161843"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4"
        app:srcCompat="@drawable/baseline_not_started_24" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/noto_serif"
        android:text="@string/cr_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="10sp"
        android:text="@string/pwd_content"
        android:textColor="@color/content_color"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="Password"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="@dimen/textbar_width"
        android:layout_height="@dimen/textbar_heidht"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/lowcase"
        android:textColor="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="12dp"
        android:text="@string/special"
        android:textColor="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/charc8"
        android:textColor="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView5.1"
        android:layout_width="12dp"
        android:layout_height="11dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:srcCompat="@drawable/baseline_fiber_manual_record_24" />

    <ImageView
        android:id="@+id/imageView5.2"
        android:layout_width="12dp"
        android:layout_height="11dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:srcCompat="@drawable/baseline_fiber_manual_record_24" />

    <ImageView
        android:id="@+id/imageView5.3"
        android:layout_width="12dp"
        android:layout_height="11dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:srcCompat="@drawable/baseline_fiber_manual_record_24" />

    <ImageView
        android:id="@+id/imageView5.4"
        android:layout_width="12dp"
        android:layout_height="11dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5"
        app:srcCompat="@drawable/baseline_fiber_manual_record_24" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/upcase"
        android:textColor="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="Re-Password"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="@dimen/textbar_width"
        android:layout_height="@dimen/textbar_heidht"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

</androidx.constraintlayout.widget.ConstraintLayout>