<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".setting">


    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="84dp"
        app:layout_constraintStart_toEndOf="@+id/seting_lable"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_settings_24" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:backgroundTint="#00FFFFFF"
        app:itemIconTint="@color/ic_launcher_background"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <TextView
        android:id="@+id/seting_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="64dp"
        android:fontFamily="sans-serif"
        android:letterSpacing=".12"
        android:text="@string/setin"
        android:textColor="@color/white"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settinfg_cont_lable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/stng_content"
        android:textColor="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seting_lable" />

    <LinearLayout
        android:layout_width="399dp"
        android:layout_height="659dp"
        android:layout_marginTop="6dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settinfg_cont_lable">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="393dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="32dp"
            android:backgroundTint="#14FFFFFF">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/baseline_notifications_24" />

            <Button
                android:id="@+id/notification_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/noti"
                android:textAlignment="textStart"
                android:textSize="@dimen/imagenamesize"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="393dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="2dp"
            android:backgroundTint="#14FFFFFF">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_favorite_24" />

            <Button
                android:id="@+id/myfav_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/myfav"
                android:textAlignment="textStart"
                android:textSize="@dimen/imagenamesize"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="2dp"
            android:backgroundTint="#14FFFFFF">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_password_24" />

            <Button
                android:id="@+id/cng_psswrd_Btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/psswrd"
                android:textAlignment="textStart"
                android:textSize="@dimen/imagenamesize"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="2dp"
            android:backgroundTint="#14FFFFFF">

            <Button
                android:id="@+id/abouth_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/about"
                android:textAlignment="textStart"
                android:textSize="@dimen/imagenamesize"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_error_outline_24" />

        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="2dp"
            android:backgroundTint="#14FFFFFF">


            <Button
                android:id="@+id/privacy_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/privacy"
                android:textAlignment="textStart"
                android:textSize="@dimen/imagenamesize"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imageView16.1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_privacy_tip_24" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="30dp"
            android:backgroundTint="#14FFFFFF">

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#00FFFFFF"
                android:text="@string/logout"
                android:textAlignment="textStart"
                android:textSize="@dimen/imagenamesize"
                app:cornerRadius="0dp" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="330dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/baseline_keyboard_arrow_right_24" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/baseline_logout_24" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>