<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    tools:context=".acc_create">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/archivo_black"
        android:text="@string/hey"
        android:textColor="@color/white"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:lineSpacingExtra="10sp"
        android:text="@string/hey_content"
        android:textColor="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:text="@string/nm"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="353sp"
        android:layout_height="@dimen/textbar_heidht"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="Enter First name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="@string/sname"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="@dimen/textbar_width"
        android:layout_height="@dimen/textbar_heidht"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="Enter Last Name"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:text="E-Mail"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/textSize"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="@dimen/textbar_width"
        android:layout_height="@dimen/textbar_heidht"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="Enter email"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/content_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="97dp"
        android:layout_height="89dp"
        android:layout_marginStart="289dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="65dp"
        android:backgroundTint="#161843"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3"
        app:srcCompat="@drawable/baseline_not_started_24" />

    <ImageButton
        android:id="@+id/backArrow"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="#022561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_west_24" />

</androidx.constraintlayout.widget.ConstraintLayout>